# adventofcode

./: .gitignore  LICENSE  README.md
2021/04/: CMakeLists.txt  CMakePresets.json  vcpkg.json
2021/04/src/: main.cpp
2021/06/: CMakeLists.txt
2021/06/src/: main.cpp
2021/Problem04/: CMakeLists.txt
2021/Problem05/: pom.xml
2021/Problem05/src/main/java/se/mwthinker/: Problem05.java
2021/Problem05/src/test/java/: Problem05.java
2021/Problem07/: pom.xml
2021/Problem07/src/main/java/se/mwthinker/: Problem07.java
2021/Problem08/: data.txt  problem08.py
